added about page

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   </head>
   <body>
     <div class="box">
+      <h1>Welcome</h1>
       <p>
         Cillum nostrud non exquisitaque ut do cernantur praetermissum. Duis aut iudicem
         non fore, singulis quis qui ullamco fidelissimae, appellat ea fore id ita aute
@@ -14,6 +15,37 @@
         elit, a malis consequat illustriora. Tamen appellat an deserunt, duis consequat
         id culpa eram.
       </p>
+
+      <p>
+        Cillum nostrud non exquisitaque ut do cernantur praetermissum. Duis aut iudicem
+        non fore, singulis quis qui ullamco fidelissimae, appellat ea fore id ita aute
+        praetermissum. Mentitum a quorum, quae litteris qui aliqua ipsum.Malis nescius o
+        comprehenderit. Iudicem et pariatur hic e velit legam iis voluptate, pariatur ad
+        elit, a malis consequat illustriora. Tamen appellat an deserunt, duis consequat
+        id culpa eram.
+      </p>
+
+      <p>
+        Cillum nostrud non exquisitaque ut do cernantur praetermissum. Duis aut iudicem
+        non fore, singulis quis qui ullamco fidelissimae, appellat ea fore id ita aute
+        praetermissum. Mentitum a quorum, quae litteris qui aliqua ipsum.Malis nescius o
+        comprehenderit. Iudicem et pariatur hic e velit legam iis voluptate, pariatur ad
+        elit, a malis consequat illustriora. Tamen appellat an deserunt, duis consequat
+        id culpa eram.
+      </p>
+
+
+      <form>
+        <div>
+          <input type="text"></input>
+        </div>
+        <div>
+          <input type="email"></input>
+        </div>
+        <div>
+          <input type="submit"></input>
+        </div>
+      </form>
     </div>
   </body>
 </html>
