--- a/index.html
+++ b/index.html
@@ -34,18 +34,15 @@
         id culpa eram.
       </p>
 
+      <h2>My new feature for the home page</h2>
 
-      <form>
-        <div>
-          <input type="text"></input>
-        </div>
-        <div>
-          <input type="email"></input>
-        </div>
-        <div>
-          <input type="submit"></input>
-        </div>
-      </form>
+      <div class="feature-box">
+        <div class="item">Feature 1</div>
+        <div class="item">Feature 2</div>
+        <div class="item">Feature 3</div>
+      </div>
+
+
     </div>
   </body>
 </html>
